<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jason4s</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcometext">jason4s 专业的招生就业平台</string>
    <string name="login">登录</string>
    <string name="hint1">请输入用户名</string>
    <string name="hint2">请输入密码</string>
    <string name="zhuce">注册</string>
    <string name="person">个人中心</string>
    <string name="back">返回</string>
    <string name="jiuye">就业</string>
    <string name="zhaosheng">招生</string>
    <string name="me">我</string>
    <string name="jiuye1">招聘分类</string>
    <string name="jiuye2">人才市场</string>
    <string name="jiuye3">考试培训</string>
    <string name="jiuye4">行业前景</string>
    <string name="jiuye5">求职攻略</string>
    <string name="jiuye6">交流中心</string>
    <string name="jiuye7">就业指南</string>
    <string name="jiuye8">校园招聘</string>
    <string name="jiuye9">服务热线</string>
    <string name="zhaosheng1">信息交流</string>
    <string name="zhaosheng2">招生信息</string>
    <string name="zhaosheng3">高校信息</string>
    <string name="zhaosheng4">实习信息</string>
    <string name="zhaosheng5">专业信息</string>
    <string name="please_login">请登录</string>
    <string name="user1">收藏夹</string>
    <string name="user2">我的简历</string>
    <string name="user3">个人资料</string>
    <string name="user_history">浏览历史</string>
    <string name="user_mine">我的帖子</string>
    <string name="user_remind">我的消息</string>
    <string name="user_update">我的关注</string>
    <string name="user_notice">推送通知</string>
    <string name="user_setting">管理与设置</string>
    <string name="user_id">用户名:</string>
    <string name="password">密码:</string>
    <string name="password_again">重复密码:</string>
    <string name="sex">性别:</string>
    <string name="birthday">出生日期:</string>
    <string name="individual_resume">个性签名:</string>
    <string name="man">男</string>
    <string name="lady">女</string>
    <string name="date_between">--</string>
    <string name="user_name">昵称:</string>
    <string name="head">头像</string>
    <string name="change">修改</string>
    <string name="password2">密码</string>
    <string name="user_name2">昵称</string>
    <string name="sex2">性别</string>
    <string name="birthday2">出生日期</string>
    <string name="out_login">退出登录</string>
    <string name="send">发表</string>
    <string name="title">标题</string>
    <string name="neirong">内容</string>
    <string name="listview_bg">
        \t\t\t\t\t全国人力资源社会保障系统热线：12333\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t12370\n
        \n
        \n
       	\t\t\t\t\t高考成绩查询热线：125809\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t16887801</string>
    <string name="fatie">发表主题</string>
    <string name="reply">回复</string>
    <string name="save">保存</string>
    <string name="person_information">个人信息</string>
    <string name="job_intention">求职意向</string>
    <string name="education">教育经历</string>
    <string name="skill">职业能力</string>
    <string name="cv">我的简历</string>
    <string name="cv1">姓名：</string>
    <string name="cv2">出生日期：</string>
    <string name="cv3">工作年限：</string>
    <string name="cv4">性别：</string>
    <string name="cv5">婚姻状况：</string>
    <string name="cv6">居住地：</string>
    <string name="cv7">户口：</string>
    <string name="cv8">手机号码：</string>
    <string name="cv9">邮箱：</string>
    <string name="cv10">求职状态：</string>
    <string name="cv11">到岗时间：</string>
    <string name="cv12">工作类型</string>
    <string name="cv13">希望行业：</string>
    <string name="cv14">目标地点：</string>
    <string name="cv15">月薪：</string>
    <string name="cv16">目标职能：</string>
    <string name="cv17">学校：</string>
    <string name="cv18">教育水平：</string>
    <string name="cv19">职业技能：</string>
    <string name="finish">完成</string>
    <string name="cv0">简历名字：</string>
    <string name="wenxue">文学</string>
    <string name="yixue">医学</string>
    <string name="jiaoyuxue">教育学</string>
    <string name="talk_place">讨论区</string>
    <string name="hangye">行业：</string>
    <string name="xingzhi">性质：</string>
    <string name="guimo">规模：</string>
    <string name="dizhi">地址：</string>
    <string name="jianjie">简介：</string>
    <string name="gongsi">公司：</string>
    <string name="zhiweimiaoshu">职位描述：</string>
    <string name="diqu">地区：</string>
    <string name="renshu">人数：</string>
    <string name="fuli">福利：</string>
    <string name="biaoqian">标签：</string>
    <string name="company">公司信息</string>
    <string name="fabushijian">发布时间：</string>
    <string name="shenqing">申请</string>
    <string name="search">搜索</string>
    <string name="job_setting">职位管理</string>
    <string name="company_setting">公司管理</string>
    <string name="new_job">新建职位</string>
    <string name="c0">公司名：</string>
    <string name="information">信息</string>
    <string name="c1">行业：</string>
    <string name="c2">性质：</string>
    <string name="c3">规模：</string>
    <string name="c4">地址：</string>
    <string name="c6">简介：</string>
    <string name="cv_setting">简历管理</string>
    <string name="j0">职位名：</string>
    <string name="j1">月薪：</string>
    <string name="j2">地区：</string>
    <string name="j3">人数：</string>
    <string name="j4">福利：</string>
    <string name="j5">标签：</string>
    <string name="cv_collection">简历收藏</string>

</resources>