<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:background="#FF7F00">

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/ic_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fatie"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/send"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/send" 
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/title" 
        android:text=""
        android:maxLength="20">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/message_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="@string/neirong"
        android:text="" 
        android:gravity="left|top"
        android:padding="10dp"
        android:maxLength="100"/>

</LinearLayout>
