<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F4" >

    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#FF7F00" >

        <TextView
            android:id="@+id/left"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/search_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/left"
            android:background="@drawable/search"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/right"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/right"
            android:layout_toRightOf="@+id/search_iv"
            android:hint="" 
            android:singleLine="true">

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/top_menu"
        android:divider="#00000000" >
    </ListView>

</RelativeLayout>