<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Welcome" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/linearLayout_user_id"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_style" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/id"
            android:contentDescription="@string/app_name"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="" />

        <EditText
            android:id="@+id/user_id_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center_vertical|left"
            android:hint="@string/hint1"
            android:inputType="textPersonName"
            android:maxLength="12"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/white"
            android:textColorHint="#ff00ff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/linearLayout_user_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_style" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/password"
            android:contentDescription="@string/app_name"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="" />

        <EditText
            android:id="@+id/user_password_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center_vertical|left"
            android:hint="@string/hint2"
            android:inputType="textPassword"
            android:maxLength="20"
            android:selectAllOnFocus="true"
            android:textColor="@android:color/white"
            android:textColorHint="#ff00ff"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/zhuce"
        android:layout_below="@+id/linearlayout_password"
        android:background="@android:color/transparent" >
    </ScrollView>

    <Button
        android:id="@+id/zhuce"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_login"
        android:text="@string/zhuce"
        android:textColor="#ff00ff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_login"
        android:text="@string/login"
        android:textColor="#ff00ff"
        android:textSize="20sp" />

</RelativeLayout>