<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/top_menu"
        android:id="@+id/top_menu"/>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top_menu" >
    </android.support.v4.view.ViewPager>
    
    <View 
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/main_bottom"/>

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.example.tool.Main_bottom_change
            android:id="@+id/Main_bottom_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/jiuye_normal"
            hyman:text="@string/jiuye"
            hyman:text_size="12sp" />

        <com.example.tool.Main_bottom_change
            android:id="@+id/Main_bottom_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/zhaosheng_normal"
            hyman:text="@string/zhaosheng"
            hyman:text_size="12sp" />

        <com.example.tool.Main_bottom_change
            android:id="@+id/Main_bottom_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/user_normal"
            hyman:text="@string/me"
            hyman:text_size="12sp" />
    </LinearLayout>

    

</RelativeLayout>